tests/neg/i4031-anysel.scala
object Test {
  val v: Any = 1: Any#L // error
}
